--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,8 +3,11 @@ tasks:
     env:
       AWS_CLI_AUTO_PROMOT: on-partial
     init: |
+      sudo apt-get update && sudo apt-get install -y unzip
       cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscluv2.zip"
+      pwd
+      ls -lah
       unzip awscliv2.zip
       sudo ./aws/install
       cd $THEIA_WORKSPACE_ROOT
