--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 tasks:
   - name: aws-cli
     env:
-      AWS_CLI_AUTO_PROMOT: on-partial
+      AWS_CLI_AUTO_PROMPT: on-partial
     init: |
       sudo apt-get update && sudo apt-get install -y unzip
       cd /workspace
